add createMultipleFromLogin method reverse parameters type and length in method create and createMultiple (more logic)
git-svn-id: http://svn.php.net/repository/pear/packages/Text_Password/trunk@103311 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,12 @@
       <name>Martin Jansen</name>
       <email>mj@php.net</email>
     </maintainer>
+    <maintainer>
+      <user>olivier</user>
+      <role>lead</role>
+      <name>Olivier Vanhoucke</name>
+      <email>olivier@php.net</email>
+    </maintainer>
   </maintainers>
   <release>
     <version>X.X</version>
