add new fonctions and rename functions
git-svn-id: http://svn.php.net/repository/pear/packages/Text_Password/trunk@110146 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -30,6 +30,7 @@
      <file role="php" baseinstalldir="Text">Password.php</file>
      <dir name="tests">
       <file role="test">01-text-password.phpt</file>
+      <file role="test">02-html-password.phpt</file>
      </dir>
     </filelist>
   </release>
