--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE package SYSTEM "package.dtd">
 <package version="1.0">
   <name>Text_Password</name>
-  <summary>Creating password with PHP.</summary>
+  <summary>Creating passwords with PHP.</summary>
   <description>
   </description>
   <license>PHP License</license>
@@ -23,8 +23,9 @@
   <release>
     <version>1.0</version>
     <state>stable</state>
-    <date>2003-04-XX</date>
+    <date>2003-05-21</date>
     <notes>
+This is the initial release.
     </notes>
     <filelist>
      <file role="php" baseinstalldir="Text">Password.php</file>
