--- a/package.xml
+++ b/package.xml
@@ -24,11 +24,12 @@ http://pear.php.net/manual/.
     </maintainer>
   </maintainers>
   <release>
-    <version>1.0</version>
+    <version>1.1</version>
     <state>stable</state>
-    <date>2003-05-21</date>
+    <date>2004-XX-XX</date>
     <notes>
-This is the initial release.
+* Improved performance
+* Added alphabetical character set for creating passwords (by Aaron Wormus)
     </notes>
     <filelist>
      <file role="php" baseinstalldir="Text">Password.php</file>
