* Added an initial draft of a method to determine if a password is well   chosen or not.
# This implementation is far from being finished, but I'm committing it
# nonetheless to get the party started.


git-svn-id: http://svn.php.net/repository/pear/packages/Text_Password/trunk@171421 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -30,6 +30,7 @@ http://pear.php.net/manual/.
     <notes>
 * Improved performance
 * Added alphabetical character set for creating passwords (by Aaron Wormus)
+* Added a method to determine if a password is well chosen
     </notes>
     <filelist>
      <file role="php" baseinstalldir="Text">Password.php</file>
