* Added unit tests for Text_Password.
git-svn-id: http://svn.php.net/repository/pear/packages/Text_Password/trunk@171678 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -35,7 +35,7 @@ http://pear.php.net/manual/.
     <filelist>
      <file role="php" baseinstalldir="Text">Password.php</file>
      <dir name="tests">
-      <file role="test">01-text-password.php</file>
+      <file role="test">Text_Password_Test.php</file>
      </dir>
     </filelist>
   </release>
