--- a/package.xml
+++ b/package.xml
@@ -31,6 +31,8 @@ http://pear.php.net/manual/.
 * Improved performance
 * Added alphabetical character set for creating passwords (by Aaron Wormus)
 * Added a method to determine if a password is well chosen
+* Added unit tests
+* Fixed bug #2605
     </notes>
     <filelist>
      <file role="php" baseinstalldir="Text">Password.php</file>
