--- a/package.xml
+++ b/package.xml
@@ -26,13 +26,15 @@ http://pear.php.net/manual/.
   <release>
     <version>1.1</version>
     <state>stable</state>
-    <date>2004-XX-XX</date>
+    <date>2005-XX-XX</date>
     <notes>
 * Improved performance
 * Added alphabetical character set for creating passwords (by Aaron Wormus)
 * Added a method to determine if a password is well chosen
 * Added unit tests
 * Fixed bug #2605
+* Fixed problematic seeding of the randon number generator (hint by
+  Stefan Esser)
     </notes>
     <filelist>
      <file role="php" baseinstalldir="Text">Password.php</file>
@@ -40,5 +42,8 @@ http://pear.php.net/manual/.
       <file role="test">Text_Password_Test.php</file>
      </dir>
     </filelist>
+    <deps>
+      <dep type="php" rel="ge" version="4.2.0" />
+    </deps>
   </release>
 </package>
