Upgrade PHPUnit require statements plus other fixes to get tests working (Bug #19172).
git-svn-id: http://svn.php.net/repository/pear/packages/Text_Password/trunk@321615 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -40,9 +40,12 @@ http://pear.php.net/manual/.
  <contents>
   <dir name="/">
    <dir name="tests">
+    <file name="AllTests.php" role="test" />
     <file name="Text_Password_Test.php" role="test" />
    </dir> <!-- //tests -->
-   <file baseinstalldir="Text" name="Password.php" role="php" />
+   <dir name="Text">
+    <file baseinstalldir="Text" name="Password.php" role="php" />
+   </dir> <!-- /Text -->
   </dir> <!-- / -->
  </contents>
  <dependencies>
