--- a/package.xml
+++ b/package.xml
@@ -26,7 +26,7 @@ http://pear.php.net/manual/.
  <date>2008-11-30</date>
  <time>14:39:10</time>
  <version>
-  <release>1.1.1</release>
+  <release>1.2.0</release>
   <api>1.1.1</api>
  </version>
  <stability>
@@ -34,8 +34,11 @@ http://pear.php.net/manual/.
   <api>stable</api>
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
- <notes>* Fixed bug #12220: potential problems with global var use (Patch by Christian Weiske)
-    
+ <notes>
+ * Fixed issues with unpronouncable password generation
+ * Updated to PHP 5 method syntax
+ * Improved tests
+ * Composer support
  </notes>
  <contents>
   <dir name="/">
@@ -51,7 +54,7 @@ http://pear.php.net/manual/.
  <dependencies>
   <required>
    <php>
-    <min>4.2.0</min>
+    <min>5.2.1</min>
    </php>
    <pearinstaller>
     <min>1.4.0b1</min>
