--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "include-path": [
         "./"
     ],
-    "license": "PHP License",
+    "license": "MIT",
     "name": "pear/text_password",
     "support": {
         "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=Text_Password",
