--- a/package.xml
+++ b/package.xml
@@ -22,11 +22,11 @@ http://pear.php.net/manual/.
   <email>olivier@php.net</email>
   <active>yes</active>
  </lead>
- <date>2008-11-30</date>
- <time>14:39:10</time>
+ <date>2016-02-01</date>
+ <time>14:42:00</time>
  <version>
   <release>1.2.0</release>
-  <api>1.1.1</api>
+  <api>1.2.0</api>
  </version>
  <stability>
   <release>stable</release>
@@ -42,7 +42,6 @@ http://pear.php.net/manual/.
  <contents>
   <dir name="/">
    <dir name="tests">
-    <file name="AllTests.php" role="test" />
     <file name="Text_Password_Test.php" role="test" />
    </dir> <!-- //tests -->
    <dir name="Text">
@@ -61,4 +60,22 @@ http://pear.php.net/manual/.
   </required>
  </dependencies>
  <phprelease />
+ <changelog>
+  <release>
+   <date>2008-11-30</date>
+   <time>14:39:10</time>
+   <version>
+    <release>1.1.1</release>
+    <api>1.1.1</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+* Fixed bug #12220: potential problems with global var use (Patch by Christian Weiske)
+   </notes>
+  </release>
+ </changelog>
 </package>
